# Computer-Vision-1---Exercise-1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  UsedPixelsMap.cpp  UsedPixelsMap.h  main.cpp  main.h
